fixed some css in signup form

--- a/index.html
+++ b/index.html
@@ -18,37 +18,43 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="form-wrapper">
-        <div class="banner">
-          <h1>Hello, Friend!</h1>
-          <p>Enter your personal details and start journey with us</p>
+    <div id="wrapper">
+      <div class="container">
+        <div class="signuppage">
+          <div class="form-wrapper">
+            <div class="banner">
+              <h1>Hello, Friend!</h1>
+              <p>Enter your personal details and start journey with us</p>
+            </div>
+            <div class="green-bg">
+              <button type="button">Sign Up</button>
+            </div>
+            <form class="signup-form">
+              <h1>Create Account</h1>
+              <div class="social-media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <p>or use your email for registration</p>
+              <div class="input-wrap">
+                <div class="input-group">
+                  <i class="fas fa-user"></i>
+                  <input type="text" placeholder="Name" required />
+                </div>
+                <div class="input-group">
+                  <i class="fas fa-envelope"></i>
+                  <input type="email" placeholder="Email" required />
+                </div>
+                <div class="input-group">
+                  <i class="fas fa-lock"></i>
+                  <input type="password" placeholder="Password" required />
+                </div>
+                <button type="submit">Sign Up</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="green-bg">
-          <button type="button">Sign Up</button>
-        </div>
-        <form class="signup-form">
-          <h1>Create Account</h1>
-          <div class="social-media">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin-in"></i>
-          </div>
-          <p>or use your email for registration</p>
-          <div class="input-group">
-            <i class="fas fa-user"></i>
-            <input type="text" placeholder="Name" />
-          </div>
-          <div class="input-group">
-            <i class="fas fa-envelope"></i>
-            <input type="email" placeholder="Email" />
-          </div>
-          <div class="input-group">
-            <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" />
-          </div>
-          <button type="button">Sign Up</button>
-        </form>
       </div>
     </div>
 
